Opened 11 years ago

Closed 11 years ago

Last modified 11 years ago

#10136 closed bug (fixed)

haiku_loader: cannot select boot volume

Reported by: dsjonny Owned by: bonefish
Priority: normal Milestone: R1
Component: System/Boot Loader Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Since I use Package Management, I cannot select the boot volume from Haiku boot menu. I have Haiku installed on the internal HDD and I have Haiku on an USB stick. If I go into the boot menu I cannot select the boot volume, because no bootable volume found.

Using hrev46281 nightly anyboot.

Change History (9)

comment:1 by diver, 11 years ago

Component: - GeneralSystem/Boot Loader
Owner: changed from nobody to bonefish
Status: newassigned

comment:2 by axeld, 11 years ago

You go into the boot menu from the USB stick, or from disk? Also, is the same Haiku version installed on both volumes? Did this setup definitely work before PM?

comment:3 by dsjonny, 11 years ago

This is the same when I boot from USB and boot from HDD. This was worked fine before PM.

comment:4 by bonefish, 11 years ago

Status: assignedin-progress

I can reproduce that with qemu as well. Part of the problem seems to be an insufficient heap size. After increasing it, the partitions can be selected again, but the loader crashes immediately afterward. Looking into it.

comment:5 by bonefish, 11 years ago

Resolution: fixed
Status: in-progressclosed

Should be fixed in hrev46287.

comment:6 by dsjonny, 11 years ago

Thank you! It is working fine now.

And I have one question: is it possible to indicate what system is what? I mean if I have 2 or more Haiku installation with the same volume name I do not know what is the one and what is the another. Is it possible to append some info to the volume name? Like the disk name or the path: Haiku (KINGSTONE SMS100...: /dev/disk/scsi/...) Haiku (Sony Storage Media...: /dev/disk/usb/...)

comment:7 by diver, 11 years ago

That would be nice indeed!

comment:8 by bonefish, 11 years ago

AFAICT the information available from the BIOS don't easily allow that. What we could display are the Haiku version and architecture. Those still might be identical, though.

comment:9 by axeld, 11 years ago

In theory, the BIOS has a method to pass that information to the boot loader. However, bonefish is right -- I haven't seen a BIOS yet that would actually make use of its documented abilities.

The only way to implement something like that would be to add that information to BFS on mount. That way it could easily be out of date, though, if you copied in a image to some place. Not sure it's worth the trouble. Maybe just adding the BIOS ID however cryptic might help differentiate those.

Note: See TracTickets for help on using tickets.